# desk

./: .gitignore  CLAUDE.md  DESK_FEEDBACK-2026-07-13T012144.md  LEARNINGS.md  PARKINGLOT.md  QUESTIONS.md  README.md  TODO.md  development-process.md  diagrams.md  how-to-convert-item-id-one-time.md  markdown-rendering.md  pyproject.toml  qtextbrowser-images-svg-controls.md  shared_development_process.md
design-docs/: alice-bob-starter-experiment.md  architecture.md  custom-widget-authoring.md  svg-viewing-and-editing.md  transforms.md  widget-ux.md
investigations/: shutdown_perf.md
plans/: add-widget-context-menu.md  audit-and-greek-widgets.md  audit-old-basic-markdown-widget-usage.md  bridge-api-editor-or-scrap.md  browser-widget-contained-popups.md  browser-widget-scroll.md  browser-widget.md  build-widget-authoring-pattern.md  build-widget-capabilities.md  claude-console-default-cwd.md  claude-widget-auto-mode.md  claude-widget-close-on-exit.md  claude-widget-session-resume.md  claude-widget.md  clickable-stale-marker-dialog.md  code-editor-widget.md  console-widget-cursor-visibility.md  console-widget-highlight-cursor-rendering.md  console-widget-pyte-private-csi-crash.md  console-widget-real-terminal-emulation.md  console-widget.md  crash-log-widget.md  custom-widget-content-hash.md  define-widget-auto-place.md  desk-bridge-api.md  desk-concept.md  desk-internal-popups.md  desk-picker-always-show-directory.md  desk-picker-new-and-rename.md  desk-picker-split-name-directory-click.md  desk-shell.md  development-process-seeding.md  drag-drop-open-external.md  (+160 more)
(+227 files in other folders)
